# tauri-plugin-foxtrail-worker-api

./: .gitignore  Cargo.toml  README.md  build.rs  package.json  rust-analyzer.json
android/: .project  build.gradle.kts  kls_database.db  local.properties
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: BackgroundWorker.kt  BackgroundWorkerPlugin.kt  Example.kt  ExamplePlugin.kt  Fetch.kt  Notification.java  Supabase.kt
android/src/test/java/: ExampleUnitTest.kt
dist-js/: index.cjs  index.d.ts  index.js
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
examples/tauri-app/src/lib/: Greet.svelte
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
